# decision-trees-from-scratch

./: .gitignore  README.md  pyproject.toml
decision_tree_from_scratch/: _tree_.py  _tree_node.py  _tree_split_.py  _tree_split_aux.py  _tree_split_criteria.py  _tree_split_criteria_base.py  decisionTree.py  decisionTree_aux.py  decisionTree_model.py  decisionTree_node.py  decisionTree_splitCriteria.py  decision_tree_classifier.py  tree_aux.py  tree_node.py  tree_split_criteria.py
decision_tree_from_scratch.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
decision_tree_from_scratch/tests/: test_criteria_gini.py  test_criteria_ig.py  test_criteria_ogini.py  test_criteria_ri.py  test_criteria_wig.py  test_split.py  test_tree_split_criterias.py
decision_trees_from_scratch/: _tree_.py  _tree_split_.py  _tree_split_aux.py  _tree_split_criteria.py  _tree_split_criteria_base.py  decision_tree_classifier.py
decision_trees_from_scratch/tests/: datatest_exercise_tracking.csv  test_criteria_gini.py  test_criteria_ig.py  test_criteria_ogini.py  test_criteria_ri.py  test_criteria_wig.py  test_decision_tree_with_sklearn.py  test_split.py  tests_split_criteria.ods
examples/: impurity_measures.py  splitting_criteria.py
