[project]
name = "decision-trees-from-scratch"
version = "0.0.1"
authors = [
  { name="Rafael Ayllón Gavilán", email="rayllong@uco.es" },
]
description = "From scratch decision tree algorithm implementation in python. Providing an sklearn compatible interface and novel ordinal regression splitting criteria."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scikit-learn",
    "pandas",
]

[project.urls]
Homepage = "https://github.com/ayrna/decision-trees-from-scratch"
Issues = "https://github.com/ayrna/decision-trees-from-scratch/issues"
